--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <title>Kalkulator BMI</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="Judul">
-        <h1>Cek BMI mu</h1>
-        <p>BMI adalah salah satu metode skrining kesehatan yang praktis untuk menilai lemak pada tubuh berdasarkan berat dan
+    <div class="judul">
+        <h1>Cek BMI</h1>
+        <p>BMI adalah salah satu metode skrining kesehatan yang praktis untuk menilai lemak pada tubuh berdasarkan berat
+            dan
             tinggi badan. </p>
         </div>
     <form action="">
-        <label for="">Masukan Berat Badan (Kg)</label> 
-        <input type="number"> 
-        <label for="">Masukan Tinggi Badan (Cm)</label> 
-        <input type="number"> 
-        <button>Kirim</button>
+        <label for="">Masukan Berat Badan (Kg)</label>
+        <input type="number">
+        <label for="">Masukan Tinggi Badan (Cm)</label>
+        <input type="number">
+        <button type="button">Hitung BMI</button>
     </form>
     <div class="Hasil">
         <h2>BMI Kamu adalah</h2>
         <p id="hasil"></p>
+        <img src="" alt="">
     </div>
-    </body>
+</body>
+
 </html>
