--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input type="number" id="bb" placeholder="Contoh: 69" required>
             <label for="">Masukan Tinggi Badan (Cm)</label>
             <input type="number" id="tb" placeholder="Contoh: 167" required>
-            <button type="button">Hitung BMI</button>
+            <button type="button" onclick="hitungBmi()">Hitung BMI</button>
         </form>
     </section>
 
