--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
         <form>
             <label for="">Masukan Berat Badan (Kg)</label>
-            <input type="number" id="bb" placeholder="Contoh: 69" required>
+            <input type="number" id="bb" placeholder="Contoh: 60" required=""/>
             <label for="">Masukan Tinggi Badan (Cm)</label>
-            <input type="number" id="tb" placeholder="Contoh: 167" required>
+            <input type="number" id="tb" placeholder="Contoh: 167" required=""/>
             <button type="button" onclick="hitungBmi()">Hitung BMI</button>
         </form>
     </section>
@@ -41,7 +41,7 @@
     <!-- card 2: untuk menampilkan hasil bmi -->
     <div class="Hasil">
         <h3>Your BMI</h3>
-        <p id="hasil">BMI Kamu sebesar 21.5 kamu termasuk golongan normal</p>
+        <p id="hasil"></p>
     </div>
 
     <!-- Disini untuk menampilkan gambar kategori bmi, gambar diambil dari google -->
